js262/test/language/module-code/parse-err-decl-pos-import-function-decl.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

function f() { import v from './decl-pos-import-function-decl.js'; }
